hphp/test/zend7/Zend/tests/temporary_cleaning_009.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %stemporary_cleaning_009.php on line 12